--- a/composer.json
+++ b/composer.json
@@ -5,8 +5,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1",
-        "illuminate/console": "5.6.*",
-        "illuminate/support": "5.6.*"
+        "illuminate/console": "5.6.*|^7.0",
+        "illuminate/support": "5.6.*|^7.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.6",
