--- a/composer.json
+++ b/composer.json
@@ -5,12 +5,12 @@
     "license": "MIT",
     "require": {
         "php": "^7.1",
-        "illuminate/console": "5.6.*|^7.0",
-        "illuminate/support": "5.6.*|^7.0"
+        "illuminate/console": "5.6.*|^7.0|^8.0",
+        "illuminate/support": "5.6.*|^7.0|^8.0"
     },
     "require-dev": {
         "orchestra/testbench": "^3.6",
-        "phpunit/phpunit": "^7.0"
+        "phpunit/phpunit": "^7.0|^8.0|^9.0)"
     },
     "autoload": {
         "psr-4": {
