--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     },
     "require-dev": {
         "orchestra/testbench": "^3.6",
-        "phpunit/phpunit": "^7.0|^8.0|^9.0)"
+        "phpunit/phpunit": "^7.0|^8.0|^9.0"
     },
     "autoload": {
         "psr-4": {
